# weather-sense

./: .dockerignore  .gitignore  .pre-commit-config.yaml  =0.19.0  CHANGELOG.md  Dockerfile  NOTES.md  README.md  docker_entrypoint.py  pyproject.toml  pytest.ini  run_integration_tests.py  test_change.txt  test_python.py  validate_deployment.py
api/: __init__.py  logging_config.py  main.py  security.py
crew/: __init__.py  agents.py  flow.py  mcp_client.py  parser.py
mcp_weather/: __init__.py  cache.py  provider.py  server.py
proxy/: README.md  index.js  wrangler.toml
tests/: test_api_e2e.py  test_api_endpoints_integration.py  test_deployment_integration.py  test_documentation_only.py  test_https_enforcement.py  test_input_sanitization.py  test_mcp_cache.py  test_mcp_client.py  test_mcp_server.py  test_mcp_stdio.py  test_parser.py  test_prometheus_metrics.py  test_proxy_healthz.py  test_pytest_integration.py  test_range_parser.py  test_security_validation.py  test_weather_analyst.py  test_weather_api_integration.py  test_weather_fetcher.py  test_weather_provider.py
utils/: metrics.py  security.py
