[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-sense"
version = "1.0.0"
description = "Weather analysis with MCP tools and CrewAI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "crewai>=0.25.1",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.6",
    "prometheus-client>=0.19.0",
]

[tool.setuptools.packages.find]
include = ["api*", "crew*", "mcp_weather*", "utils*"]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "docker>=6.1.0",
    "requests>=2.31.0",
]
dev = [
    "pre-commit>=3.6.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
